unpackaged/main/default/objects/gIdentifyInquiry__c/gIdentifyInquiry__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>gIdentifyInquiry</label>
</CustomObject>