unpackaged/main/default/objects/gIdentifyInquiry__c/fields/CustomErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>CustomErrorMsg__c</fullName>
    <label>Custom Error Msg</label>
    <type>TextArea</type>
</CustomField>