unpackaged/main/default/objects/gIdentifyInquiry__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>CustomerType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>