unpackaged/main/default/objects/gIdentifyInquiry__c/fields/GIACTName__c.field-meta.xml
<CustomField>
    <fullName>GIACTName__c</fullName>
    <label>GIACTName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>